SERVER-22190 set electionTime in heartbeart response under protocol version 1